# GLDraw

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.txt  README.md  README.zh-CN.md  REFACTOR_LOG.md  SECURITY.md  build.bat  release.bat  release.sh  vscode_build.bat  vscode_build.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_task.yml  bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  coverage.yml  legacy-release.yml  lint-workflows.yml  release-smoke.yml  release.yml  security.yml  static-analysis.yml  wiki-sync.yml
cmake/: CompilerOptions.cmake  Dependencies.cmake  Packaging.cmake  Sources.cmake  Tests.cmake
doc/: README-zh.md  README.md  agent-playbooks.md  ai-agents.md  build.md  c-language-must-know-for-gldraw.en.md  c-language-must-know-for-gldraw.md  controls.md  dependencies.md  github-collaboration-guidelines.md  release.md  testing.md
doc/adr/: 0001-workspace-as-editor-hub.md  0002-command-executor-for-durable-mutations.md  0003-descriptor-driven-objects-and-tools.md  0004-ui-does-not-own-editing-rules.md  0005-ai-agent-contribution-boundaries.md  0006-third-party-source-layout.md  README.md
doc/architecture/: core-systems.md  data-flow.md  extension-model.md  overview.md  refactor-roadmap.md
doc/archive/: README.md  REFACTOR_LOG.md  architecture-layering-plan.md
doc/contributing/: c-contributor-guide.en.md  c-contributor-guide.zh.md  github-collaboration-guidelines.md  github-templates.md  overview.md
doc/reference/: file-map.md
doc/user/: controls.md  getting-started.md
doc/wiki/: Home.md  README.md  _Sidebar.md  architecture-layering-plan.md  architecture.md  core-systems-input.md  core-systems-overview.md  core-systems-rendering.md  core-systems-selection.md  core-systems-shape.md  core-systems-tool.md  core-systems-ui.md  data-flow.md  extending.md  faq.md  getting-started.md  introduction.md  known-issues.md  project-structure.md
include/app/: application.h  application_dialog_actions.h  application_file_actions.h  application_runtime.h  command_availability.h  command_catalog.h  command_dispatcher.h  command_registry.h  command_types.h  editor_action_handler.h  editor_controller.h  editor_session.h  extension_loader.h  object_manifest.h  registration_manifest.h  tool_manifest.h  ui_dialog_types.h  workspace.h  workspace_actions.h  workspace_clipboard.h  workspace_dialog_commands.h  workspace_dialogs.h  workspace_edit_commands.h  workspace_file_commands.h  workspace_internal.h  workspace_layout_types.h  workspace_service.h  workspace_service_types.h  workspace_tool_commands.h  workspace_view_commands.h
include/base/: file_utils.h  log.h  math2d.h  path_utils.h  resource_path.h  types.h
include/canvas/: canvas_view.h
include/commands/: command.h
include/core/: app_state.h  draw_tool.h  input.h  macros.h  nuklear_ui.h  renderer.h  select_tool.h  selection_manager.h  shader.h  shape.h  shape_impl.h  shape_manager.h  shape_registry.h  tool.h  tool_manager.h  window.h
include/document/: document.h  document_internal.h  history.h  object.h  persistence.h
include/editor/: editor_action.h
include/glad/: glad.h
include/image/: png_writer.h
include/input/: input_router.h  key_chord.h  keymap.h
include/model/: selection.h
include/nuklear/: nuklear_glfw_gl3.h
include/platform/: file_dialog.h  window.h
include/render/: buffer_pool.h  canvas_drawlist.h  canvas_renderer.h  render_arena.h  render_device.h  render_device_factory.h  render_scene.h  render_system.h  shader_manager.h
include/script/: script_runtime.h
include/tools/: tool.h  tool_controller.h
include/ui/: editor_action.h  editor_viewmodel.h  ui_dialog.h  ui_system.h  ui_theme.h
packaging/linux/: GLDraw.desktop
packaging/windows/: GLDraw.iss
scripts/: check.ps1  check.sh  star_wreath.lua
shaders/: basic.frag  basic.vert
src/: app_state.c  draw_tool.c  glad.c  input.c  main.c  nuklear_ui.c  renderer.c  select_tool.c  selection_manager.c  shader.c  shape.c  shape.h  shape_geometry.c  shape_geometry.h  shape_manager.c  shape_manager.h  shape_registry.c  tool.c  tool_manager.c  window.c
src/app/: application.c  application_callbacks.c  application_dialog_actions.c  application_file_actions.c  application_internal.h  application_runtime.c  application_workspace_services.c  command_availability.c  command_catalog.c  command_definitions.h  command_dispatcher.c  command_registry.c  editor_action_handler.c  editor_controller.c  editor_viewmodel.c  extension_manifest.c  manifest_runner.c  manifest_runner.h  registration_manifest.c  tool_manifest.c  workspace.c  workspace_actions.c  workspace_clipboard.c  workspace_dialog_commands.c  workspace_dialogs.c  workspace_edit_commands.c  workspace_file_commands.c  workspace_service.c  workspace_tool_commands.c  workspace_view_commands.c
src/base/: file_utils.c  path_utils.c  resource_path.c
src/canvas/: canvas_view.c
src/commands/: command.c  command_create_object.c  command_delete_selection.c  command_executor.c  command_internal.h  command_layer_ops.c  command_move_objects.c  command_object_checks.c  command_object_ops.c  command_paste_objects.c  command_set_property.c  command_transaction.c
src/document/: document.c  document_internal.h  document_layers.c  document_objects.c  document_spatial_index.c  history.c  object.c  object_ellipse.c  object_fake_star.c  object_internal.h  object_line.c  object_properties.c  object_rect.c  object_registry.c  object_runtime.c  persistence.c  persistence_json.c  persistence_json.h  (+5 more)
tests/: test_commands.c  test_document.c  test_document_core.c  test_fake_star.c  test_png_writer.c  test_registry.c  test_renderer.c  test_resource_path.c  test_script_runtime.c  test_selection.c  test_ui_logic.c  test_ui_theme.c  test_workspace_service.c
themes/: README.md  oceanic.json  paper_ink.json
tools/: package_appimage.sh  package_release.ps1  package_release.sh  package_windows_installer.ps1
(+77 files in other folders)
